Add cron + redesign front
